# StreetGridOS

./: .gitignore  README.md
docs/: hardware_specs.md
firmware/: Cargo.toml  build.rs  config.yaml  config_example.yaml
firmware/src/: comms.rs  config.rs  main.rs  node.rs  types.rs
firmware/src/hal/: adc.rs  gpio.rs  lora.rs  mod.rs
orchestrator/: go.mod  streetgrid
orchestrator/cmd/: main.go
orchestrator/cmd/streetgrid/: main.go
proto/: neighborhood.proto
simulation/scenarios/: grid_failure.json
simulation/src/: main.py  model.py  test_model.py
tools/: build_all.sh  flash_pi.sh
