[package]
name = "streetgrid-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
prost = "0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
serde_yaml = "0.9.34"
clap = { version = "4.5.53", features = ["derive"] }
async-trait = "0.1.89"

[build-dependencies]
prost-build = "0.12"

# Raspberry Pi / Linux specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.18"
ads1x1x = "0.3"
linux-embedded-hal = "0.4"
